--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "bootstrap": "^5.2.2",
     "primereact": "^8.6.1",
     "react": "^18.2.0",
+    "react-auto-image-slider": "^1.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
