--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "primereact": "^8.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "validator": "^13.7.0",
