--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.5",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
